Discussions: Fix 'View More' button on collapsed sections

--- a/github-dark.css
+++ b/github-dark.css
@@ -1341,7 +1341,8 @@
   .select-menu-item.navigation-focus .description-inline,
   .gist-snippet-meta .gist-count-links > li > a:hover,
   .team-member-list .manage-team-member .navigation-focus .btn-link,
-  .dangerzone > h3 {
+  .dangerzone > h3,
+  .timeline-progressive-disclosure-link.btn-outline:hover .muted-link {
     color: #fff !important;
   }
   h1, h2, h1 strong, h2 strong, .btn, a.btn, .btn.btn-primary, .button.primary,
